# nyora-python

./: .gitignore  README.md  bridge.js  package-lock.json  package.json  parsers.bundle.js  pyproject.toml  sources.json
.github/workflows/: publish.yml
docs/: conf.py  index.md  llms.txt  quickstart.md
docs/_static/: brand.css
docs/guide/: agents.md  cli.md  library.md  ota.md  server.md  sync.md  tui.md
docs/reference/: api.md
scripts/: build-docs.sh
src/nyora/: __init__.py  _meta.py  blocked_sources.py  cli.py  client.py  config.py  direct.py  errors.py  helper.py  models.py  ordering.py  ota.py  pagers.py  parser_bridge.py  retry.py  runtime.py  schema.py  server.py  sync.py  theme.py
src/nyora/assets/: __init__.py
src/nyora/services/: __init__.py  _base.py  backup.py  downloads.py  library.py  manga.py  sources.py  system.py
src/nyora_extension_server/: __init__.py  cli.py  jre.py  server.py
src/nyora_tui/: __init__.py  _translations.py  app.py  i18n.py  store.py  sync.py
tests/: __init__.py  conftest.py  test_cli.py  test_direct.py  test_i18n.py  test_models.py  test_ota.py  test_pagers.py  test_retry.py  test_runtime_polyfills.py  test_schema.py  test_server.py  test_sync.py  test_theme.py  test_tui.py
