[project]
name = "nyora"
version = "2.1.0"
description = "The manga reader SDK for Python — build a manga/manhwa/manhua reader with 390 working sources across 40 languages through one typed API — fully self-contained (bundles & auto-launches its own local parser engine, no cloud required) or pointed at any server. A programmatic Tachiyomi/Mihon/Kotatsu alternative, with a CLI and terminal reader (TUI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Md Hasan Raza" },
]
keywords = ["nyora", "manga", "manga-reader", "manga-api", "manga-sdk", "manhwa", "manhua", "webtoon", "comics", "reader", "tachiyomi", "mihon", "kotatsu", "sdk", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # --- engine / SDK core ---
    "httpx>=0.27.0",
    "platformdirs>=4.2.0",
    "nyora-extension-server>=0.1.0",  # bundled local parser engine (self-contained)
    "typing-extensions>=4.12.0",
    # --- full experience shipped by default: rich CLI, TUI, images, completion ---
    "rich>=13.7.0",
    "textual>=0.86.0",
    "textual-image>=0.13.2; python_version >= '3.12'",
    "rich-pixels>=3.0.1",
    "pillow>=10.0.0",
    "argcomplete>=3.0",
]

[project.optional-dependencies]
# Everything ships in core now; these are kept as no-op aliases so existing
# `pip install "nyora[tui]"` / `"nyora[completion]"` commands keep working.
tui = []
completion = []
docs = [
    "sphinx>=7.3",
    "furo>=2024.5",
    "myst-parser>=3.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "linkify-it-py>=2.0",
]
dev = [
    "build>=1.2.0",
    "mypy>=1.11.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
    "twine>=5.1.0",
]

# Label names are chosen so PyPI renders branded sidebar icons: it detects the
# GitHub host for "Source Code", and matches "Documentation"/"Issue Tracker".
[project.urls]
Homepage = "https://nyora.xyz"
Documentation = "https://nyora.xyz/docs/python/"
"Web App" = "https://web.nyora.xyz"
"Source Code" = "https://github.com/Nyora-Manga/nyora-python"
"Issue Tracker" = "https://github.com/Nyora-Manga/nyora-python/issues"

[project.scripts]
nyora-tui = "nyora_tui.app:main"
nyora-cli = "nyora.cli:main"
nyora = "nyora.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/nyora", "src/nyora_tui"]

[tool.hatch.build.targets.wheel.force-include]
"parsers.bundle.js" = "nyora/assets/parsers.bundle.js"
"sources.json" = "nyora/assets/sources.json"
"src/nyora/py.typed" = "nyora/py.typed"
"src/nyora_tui/py.typed" = "nyora_tui/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
packages = ["nyora", "nyora_tui"]

[[tool.mypy.overrides]]
module = ["nyora_extension_server", "rich_pixels", "textual_image", "textual_image.*", "textual.*", "PIL", "PIL.*", "argcomplete"]
ignore_missing_imports = true
